@@ -973,10 +973,11 @@ enum e_skill {
 	NPC_WIDESOULDRAIN,
 
 	ALL_INCCARRY = 681,
-	/*
-	NPC_TALK = 682,
-	NPC_HELLPOWER,	
+
+	//NPC_TALK = 682,
+	NPC_HELLPOWER = 683,
 	NPC_WIDEHELLDIGNITY,
+	/*
 	NPC_INVINCIBLE,
 	NPC_INVINCIBLEOFF,
 	*/
